New year updates

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en-AU">
 <head>
@@ -466,7 +467,7 @@ margin-bottom:0}
 
             <div class="q" data-id="s-y-y">
 
-                <p class="msg"><b>Note</b>: If you have <b>lost your job</b> or been <b>stood down</b> on or after <b>1 March 2020</b> your employer may be eligible for the "JobKeeper" payment. This is a government payment to allow employers to keep on employees and pay them at least <b>$1500</b> per fortnight. Speak to your employer about this option.<br><br> If you are <b>self-employed</b> you may also be eligible. <a href="https://www.ato.gov.au/general/JobKeeper-payment/">Find out more here</a>. In the meantime, <b>you may still be eligible for a Centrelink payment</b>.</p>
+                <p class="msg"><b>Note</b>: If you have <b>lost your job</b> or been <b>stood down</b> on or after <b>1 March 2020</b> your employer may be eligible for the "JobKeeper" payment. This is a government payment to allow employers to keep on employees and pay them a certain amount per fortnight to keep staff members on the books. The eligibility requirements to receive this payment have changed. Speak to your employer about this option. They can seek advice about whether they are eligible from the Australian Tax Office.<br><br>If you are <b>self-employed</b> you may also be eligible. You can find out more from the <a href="https://www.ato.gov.au/general/JobKeeper-payment/"> Australian Tax Office</a>. In the meantime, <b>you may still be eligible for a Centrelink payment</b>.</p>
 
                 <p>Are you <b>already receiving</b> a JobSeeker (formerly Newstart) or a Youth Allowance job seeker payment?</p>
                 <p class="opts"><a>Yes</a><a>No</a></p>
@@ -484,15 +485,15 @@ margin-bottom:0}
                     <li><b>Parenting Payment</b> if you are a young child's main carer</li> 
                 </ol>
 
-                <p><b>Note</b>: anyone receiving these payments will receive the temporary <b>Coronavirus Supplement</b> which is an <b>extra $550 a fortnight</b> payment on top of your income support payment.</p>
+                <p>For a limited time, anyone receiving these payments will receive the temporary <b>Coronavirus Supplement</b> on top of your income support payment.</p>
 
-                <p>This is a temporary payment that is schedule to stop 24 September 2020. Beyond this date, the Coronavirus Supplement will be available at $250 per fortnight until 31 December 2020.</p>
+                <p>The Coronavirus Supplement is a temporary payment. From 1 January 2021 to 31 March 2021 the Coronavirus Supplement rate will reduce to $150 per fortnight. Coronavirus Supplement will stop from 1 April 2021.</p>
 
                 <p>Go to <a href="https://my.gov.au/">myGov</a> to log in and get started.</p>
 
                 <div class="flag">
 
-                    <p>If you have <b>lost your job</b> or been <b>stood down</b> on or after <b>1 March 2020</b> your employer may be eligible for the "JobKeeper" payment. This is a government payment to allow employers to keep on employees and pay them at least $1500 per fortnight. Speak to your employer about this option.<br><br> If you are <b>self-employed</b> you may also be eligible. <a href="https://www.ato.gov.au/general/JobKeeper-payment/">Find out more here</a>. In the meantime, <b>you may still be eligible for a Centrelink payment</b> and should register your intention to claim.</p>
+                    <p>If you have <b>lost your job</b> or been <b>stood down</b> on or after <b>1 March 2020</b> your employer may be eligible for the "JobKeeper" payment.  This is a government payment to allow employers to keep on employees and pay them a certain amount per fortnight to keep staff members on the books. The eligibility requirements to receive this payment have changed. Speak to your employer about this option. They can seek advice about whether they are eligible from the Australian Tax Office.<br><br>If you are <b>self-employed</b> you may also be eligible. You can find out more from the <a href="https://www.ato.gov.au/general/JobKeeper-payment/"> Australian Tax Office</a>. In the meantime, <b>you may still be eligible for a Centrelink payment</b> and should register your intention to claim.</p>
 
                     <p>You <b>do not need</b> to give Centrelink a bank statement, employment separation certificate or letter from your employer. Just lodge your intention to claim online and Centrelink will be in touch with you if they need more information.</p> 
 
@@ -526,11 +527,11 @@ margin-bottom:0}
 
             <div class="results" data-id="s-y-y-y" data-end="yes">
 
-                <h3>Update Centrelink to your change in circumstances</h3>
+                <h3>Update Centrelink about your change in circumstances</h3>
 
-                <p>(e.g. if your or your partner's income has changed or you have had shifts cut)</p>  
+                <p>(e.g. if you or your partner's income has changed or you have had shifts cut)</p>  
 
-                <p>Centrelink is experiencing long delays. <b>Please do not go to your local Centrelink office</b>, instead:</p>
+                <p>Centrelink has been experiencing delays. While you can attend the office, you may prefer to update your details:</p>
 
                 <ol>
                     <li><b>Online</b>: you can update your change in circumstances through your <a href="https://my.gov.au/">myGov</a> account</li>
@@ -543,11 +544,9 @@ margin-bottom:0}
                     <li>The <b>Coronavirus supplement</b>*</li>
                 </ol>
 
-                <p>The Coronavirus Supplement is a temporary payment. JobSeeker recipients will receive the supplement until 24 September 2020 when it is scheduled to stop. Beyond this date, the Coronavirus Supplement will be available at $250 per fortnight until 31 December 2020.</p>
+                <p>The Coronavirus Supplement is an additional temporary payment on top of certain Centrelink payments. From 1 January 2021 to 31 March 2021 the Coronavirus Supplement rate will reduce to $150 per fortnight. The Coronavirus Supplement will stop from 1 April 2021</p>
 
-                <p>* an additional, <b>temporary payment of $550 per fortnight</b> to people receiving certain payments. Check if you are eligible <a href="https://www.dss.gov.au/about-the-department/coronavirus-covid-19-information-and-support#cor">here</a>.</p> 
-
-                <p>Find out more <a href="http://ejaustralia.org.au/self-help/">here</a>.</p>
+                <p>For more information on eligible payments, please visit the <a href="https://www.servicesaustralia.gov.au/individuals/services/centrelink/coronavirus-supplement/who-can-get-it">Services Australia website</a>.</p>
 
                 <div class="flag">
 
@@ -570,9 +569,9 @@ margin-bottom:0}
                     <li><b>Parenting Payment</b> if you are a young child's main carer</li> 
                 </ol>
                 
-                <p>Anyone receiving these payments will receive the temporary <b>Coronavirus Supplement</b> which is an <b>extra $550 a fortnight</b> payment on top of your income support payment.</p>
+                <p>For a limited time, anyone receiving these payments will receive the temporary <b>Coronavirus Supplement</b> on top of your income support payment.</p>
 
-                <p>The Coronavirus Supplement is a temporary payment. JobSeeker recipients will receive the supplement until 24 September 2020 when it is scheduled to stop. Beyond this date, the Coronavirus Supplement will be available at $250 per fortnight until 31 December 2020.</p>
+                <p>The Coronavirus Supplement is a temporary payment. From 1 January 2021 to 31 March 2021 the Coronavirus Supplement rate will reduce to $150 per fortnight. Coronavirus Supplement will stop from 1 April 2021.</p>
 
                 <p>Go to <a href="https://my.gov.au/">myGov</a> to log in and get started.</p>
 
@@ -580,7 +579,7 @@ margin-bottom:0}
 
                 <div class="flag">
 
-                    <p>Note: <b>Mutual obligation recommenced</b> on 4 August after being temporarily paused due to COVID-19. This means that your JobSeeker payment may be cancelled if you refuse suitable work without a reasonable excuse.</p>
+                    <p>Note: <b>Mutual obligations</b> for the JobSeeker payment, Youth Allowance as a job seeker or Parenting Payment were temporarily suspended during COVID-19. They have now recommenced nationwide. That means that your JobSeeker payment may be cancelled if you refuse suitable work without a reasonable excuse.</p>
 
                 </div>
                 
@@ -596,15 +595,13 @@ margin-bottom:0}
                     <li>The <b>Coronavirus supplement</b></li>
                 </ol>
 
-                <p>The Coronavirus supplement is an additional, <b>temporary payment of $550 per fortnight</b> to people receiving certain payments. Check if you are eligible <a href="https://www.dss.gov.au/about-the-department/coronavirus-covid-19-information-and-support#cor">here</a>.</p> 
+                <p>The Coronavirus supplement is an additional, <b>temporary payment</b> on top of certain Centrelink payments. From 1 January 2021 Supplement rate will reduce to $150 per fortnight. The Coronavirus Supplement will stop from 1 April 2021.</p>
 
-                <p>It is scheduled to stop 24 September 2020. Beyond this date, the Coronavirus Supplement will be available at $250 per fortnight until 31 December 2020.</p>
-
-                <p>Find out more <a href="http://ejaustralia.org.au/self-help/">here</a>.</p>
+                <p>For more information on eligible payments, please visit the <a href="https://www.servicesaustralia.gov.au/individuals/services/centrelink/coronavirus-supplement/who-can-get-it">Services Australia website</a>.</p>
 
                 <div class="flag">
 
-                    <p>Note: <b>Mutual obligation</b> requirements for the JobSeeker payment, Youth Allowance as a job seeker or Parenting Payment were temporarily suspended due to COVID-19. They recommenced on 4 August 2020. That means that your JobSeeker payment may be cancelled if you refuse suitable work without a reasonable excuse.</p> 
+                    <p>Note: <b>Mutual obligation</b> requirements for the JobSeeker payment, Youth Allowance as a job seeker or Parenting Payment were temporarily suspended due to COVID-19. They have now recommenced nationwide. That means that your JobSeeker payment may be cancelled if you refuse suitable work without a reasonable excuse.</p> 
 
                 </div>
 
